Fixing mobile card content alignment.

--- a/src/stylesheets/modules/_cards.scss
+++ b/src/stylesheets/modules/_cards.scss
@@ -34,13 +34,7 @@
     position: relative;
     h3 {
       color: $grey-1;
-      margin-bottom: 1rem;
-      position: relative;
-      top: 7px;
-    }
-    p {
-      color: $grey-4;
-      font-weight: initial;
+      margin-bottom: .5rem;
     }
     .fab {
       position: absolute;
